

Table Users {
  id integer [primary key]
  username varchar [not null]
  name varchar
  phone varchar
  email varchar [not null]
  ranking integer 
  psw varchar [note: 'hashed']
  MFA bool [note: 'true send random email pin']
  games_1v1 integer
  tournomant integer
  registed timestamp
  last_login timestamp [default: `now()`]
}

Table Games_1v1 {
  timestamp timestamp [default: `now()`]
  first_username varchar
  first_points integer
  second_username varchar
  second_points integer
  id integer [primary key]
}

Table Tournament {
  timestamp timestamp [default: `now()`]
  tournmaent_1v7 bool [note: 'false-> set NULL to fifth till eight']
  tournament_name varchar
  first_username varchar
  first_tounamentname varchar
  first_points integer

  second_username varchar
  second_tounamentname varchar
  second_points integer
 

  third_username varchar
  third_tounamentname varchar
  third_points integer

  fourth_username varchar
  fourth_tounamentname varchar
  fourth_points integer


  fifth_username varchar
  fifth_tounamentname varchar
  fifth_points integer


  sixth_username varchar
  sixth_tounamentname varchar
  sixth_points integer


  seventh_username varchar
  seventh_tounamentname varchar
  seventh_points integer

  eighth_username varchar
  eighth_tounamentname varchar
  eighth_points integer
  id integer [primary key]
}

Ref : Users.games_1v1 > Games_1v1.id
Ref : Users.id - Games_1v1.first_username
Ref : Users.id - Games_1v1.second_username

Ref : Users.tournomant <> Tournament.id
Ref : Users.id - Tournament.first_username
Ref : Users.id - Tournament.second_username
Ref : Users.id - Tournament.third_username
Ref : Users.id - Tournament.fourth_username
Ref : Users.id - Tournament.fifth_username
Ref : Users.id - Tournament.sixth_username
Ref : Users.id - Tournament.seventh_username
Ref : Users.id - Tournament.eighth_username1D